# ClosestPointMethod

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/HeatArc/: CMakeLists.txt  HeatArc.cpp
examples/HeatCircle/: CMakeLists.txt  HeatCircle.cpp
examples/HeatSphere/: CMakeLists.txt  HeatSphere.cpp
examples/PoissonArc/: CMakeLists.txt  PoissonArc.cpp
examples/ShiftedPoissonCircle/: CMakeLists.txt  ShiftedPoissonCircle.cpp
examples/ShiftedPoissonSphere/: CMakeLists.txt  ShiftedPoissonSphere.cpp
examples/TestInterpolation/: CMakeLists.txt  TestInterpolation.cpp
src/: CMakeLists.txt  FDMatrices.cpp  FDMatrices.h  Grid.cpp  Grid.h  Helpers.cpp  Helpers.h  Interpolation.cpp  Interpolation.h  Node.cpp  Node.h  Surface.cpp  Surface.h  Tests.cpp  Tests.h
